# elvish

./: Cargo.toml  README.md  flake.nix
crates/core/: Cargo.toml
crates/core/src/: data.rs  lib.rs  solution.rs
crates/macros/: Cargo.toml
crates/macros/src/: declare.rs  example.rs  lib.rs  solution.rs
examples/: declarative-macros.rs  full-macros.rs  no-macros.rs
examples/full/2023/: Cargo.toml  README.md  elvish.toml
examples/full/2023/.elvish/: day01.ron  day02.ron
examples/full/2023/src/: main.rs
examples/full/2023/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
examples/full/empty-template/: Cargo.toml
examples/full/empty-template/src/: main.rs
examples/full/empty-template/src/solutions/: day01.rs  mod.rs
src/: decl_macros.rs  lib.rs
