[package]
name = "elvish"
version = "0.1.0"
edition = "2021"

[dependencies]
elvish-macros = { path = "crates/macros", version = "0.1.0" }
elvish-core = { path = "crates/core", version = "0.1.0" }
color-eyre.workspace = true

clap = { version = "4.5.8", features = ["derive"] }
indoc = "2.0.5"
paste = "1.0.15"
dotenvy = "0.15.7"
tracing-subscriber = "0.3.18"
arboard = "3.4.1"

[workspace]
members = ["crates/core", "crates/macros"]
exclude = ["examples/full/2023"]

[workspace.dependencies]
color-eyre = "0.6.3"
