[workspace.package]
version = "0.1.0"
authors = ["Odilf <odysseas.maheras@gmail.com>"]
description = "Overengineered Advent of Code framework - not quite Santa's elves"
license = "MIT"
edition = "2021"

[package]
name = "elvish"
version.workspace = true 
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
elvish-macros = { path = "crates/macros", version = "0.1.0" }
elvish-core = { path = "crates/core", version = "0.1.0" }
color-eyre.workspace = true

clap = { version = "4.5.8", features = ["derive"] }
indoc = "2.0.5"
paste = "1.0.15"
dotenvy = "0.15.7"
tracing-subscriber = "0.3.18"
arboard = "3.4.1"
tracing = "0.1.40"

[workspace]
members = ["crates/core", "crates/macros"]
exclude = ["examples/full/2023"]

[workspace.dependencies]
color-eyre = "0.6.3"
