[package]
name = "elvish-core"
version.workspace = true 
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
color-eyre.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
reqwest = { version = "0.12.8", features = ["blocking"] }
ron = "0.8.1"
jiff = "0.1.13"
tl = "0.7.8"
mdka = "1.2.10"
